[gd_scene load_steps=2 format=3 uid="uid://b88yera7nntv4"]

[ext_resource type="Script" uid="uid://b0jdkk6sm3j7n" path="res://HUD/multiplayer_hud.gd" id="1_6fiq1"]

[node name="MultiplayerHUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6fiq1")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 0
offset_right = 167.0
offset_bottom = 186.0
size_flags_vertical = 3

[node name="DeineIP" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Deine IP: "

[node name="HostGame" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Host a game"

[node name="enterIPpls" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Enter Ip befor join pls"

[node name="TextEdit" type="TextEdit" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "127.0.0.1
"

[node name="JoinAsPlayer2" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Join a game
"
